// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SideCards Component AccessCode sidecard 1`] = `
<div>
  <div
    className="dashboard-spacing"
    style={
      Object {
        "position": "relative",
      }
    }
  >
    <div
      className="row"
    >
      <div
        className="col-12"
        style={
          Object {
            "paddingTop": "30px",
            "position": "relative",
          }
        }
      >
        <p />
        <section
          className="bluegrey-container"
          id="bluegrey-section"
        >
          <div
            className="container-background bluegrey-heading"
          >
            <h2
              className="heading-style"
            >
              Need help with an access code?
            </h2>
          </div>
          <div
            className="bluegrey-content"
          >
            <span
              className="content-style"
            >
              Access code is specific to each organization. If you need help with the organization access code, please 
              <b
                className="block"
              >
                contact your organization.
              </b>
            </span>
          </div>
        </section>
      </div>
    </div>
  </div>
</div>
`;

exports[`SideCards Component AccessCode sidecard 2`] = `
<div>
  <div
    className="dashboard-spacing"
    style={
      Object {
        "position": "relative",
      }
    }
  >
    <div
      className="row"
    >
      <div
        className="col-12"
        style={
          Object {
            "paddingTop": "30px",
            "position": "relative",
          }
        }
      >
        <p />
        <section
          className="submit-container"
          id="blue-section"
        >
          <h2
            className="heading-style"
          >
            Useful Links
          </h2>
          <div
            className="submit-content"
          >
            <span>
              <li
                className="menuItem"
              >
                <a
                  href="/"
                >
                  Home
                </a>
              </li>
              <li
                className="menuItem"
              >
                <a
                  href="/somewhere"
                >
                  Somewhere
                </a>
              </li>
              <li
                className="menuItem"
              >
                <a
                  href="/somewhereelse"
                >
                  Somewhere else
                </a>
              </li>
              <li
                className="menuItem"
              >
                <a
                  href="/here"
                >
                  Somewhere with a long name for no reason
                </a>
              </li>
            </span>
          </div>
        </section>
      </div>
    </div>
  </div>
</div>
`;

exports[`SideCards Component BcServices sidecard 1`] = `
<div>
  <div
    className="wide-dashboard-spacing"
    style={
      Object {
        "position": "relative",
      }
    }
  >
    <div
      className="row"
    >
      <div
        className="col-12"
        style={
          Object {
            "paddingTop": "30px",
            "position": "relative",
          }
        }
      >
        <p />
        <section
          className="submit-container"
          id="blue-section"
        >
          <h2
            className="heading-style"
          >
            <div
              className="row"
            >
              <div
                className="round-icon-wrapper"
              >
                <svg
                  className="side-card-icon"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  strokeWidth="0"
                  style={
                    Object {
                      "color": undefined,
                    }
                  }
                  viewBox="0 0 576 512"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M528 32H48C21.5 32 0 53.5 0 80v16h576V80c0-26.5-21.5-48-48-48zM0 432c0 26.5 21.5 48 48 48h480c26.5 0 48-21.5 48-48V128H0v304zm352-232c0-4.4 3.6-8 8-8h144c4.4 0 8 3.6 8 8v16c0 4.4-3.6 8-8 8H360c-4.4 0-8-3.6-8-8v-16zm0 64c0-4.4 3.6-8 8-8h144c4.4 0 8 3.6 8 8v16c0 4.4-3.6 8-8 8H360c-4.4 0-8-3.6-8-8v-16zm0 64c0-4.4 3.6-8 8-8h144c4.4 0 8 3.6 8 8v16c0 4.4-3.6 8-8 8H360c-4.4 0-8-3.6-8-8v-16zM176 192c35.3 0 64 28.7 64 64s-28.7 64-64 64-64-28.7-64-64 28.7-64 64-64zM67.1 396.2C75.5 370.5 99.6 352 128 352h8.2c12.3 5.1 25.7 8 39.8 8s27.6-2.9 39.8-8h8.2c28.4 0 52.5 18.5 60.9 44.2 3.2 9.9-5.2 19.8-15.6 19.8H82.7c-10.4 0-18.8-10-15.6-19.8z"
                  />
                </svg>
              </div>
              <div
                className="sideCardTitle"
              >
                Using the BC Services Card
              </div>
            </div>
          </h2>
          <div
            className="submit-content"
          >
            <span>
              <div
                className="side-card-text"
              >
                If you have a BC Services Card, you must use it to log in to the online security verification page.
              </div>
              <div>
                <a
                  href="https://www2.gov.bc.ca/gov/content/governments/government-id/bc-services-card"
                >
                  <div
                    className="side-card-link"
                  >
                    Learn more about the BC Services Card.
                  </div>
                </a>
              </div>
              <div
                className="side-card-text"
              >
                <br />
                Eligibility for a BC Services Card is the same as for the Medical Services Plan(MSP).
              </div>
              <div>
                <a
                  href="https://www2.gov.bc.ca/gov/content/health/health-drug-coverage/msp/bc-residents/eligibility-and-enrolment/are-you-eligible"
                >
                  <div
                    className="side-card-link"
                  >
                    Learn more about BC Services Card eligibility.
                  </div>
                </a>
              </div>
            </span>
          </div>
        </section>
      </div>
    </div>
  </div>
</div>
`;

exports[`SideCards Component ContactInformation sidecard 1`] = `
<div>
  <div
    className="wide-dashboard-spacing"
    style={
      Object {
        "position": "relative",
      }
    }
  >
    <div
      className="row"
    >
      <div
        className="col-12"
        style={
          Object {
            "paddingTop": "30px",
            "position": "relative",
          }
        }
      >
        <p />
        <section
          className="submit-container"
          id="blue-section"
        >
          <h2
            className="heading-style"
          >
            <div
              className="row"
            >
              <div
                className="round-icon-wrapper"
              >
                <svg
                  className="side-card-icon"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  strokeWidth="0"
                  style={
                    Object {
                      "color": undefined,
                    }
                  }
                  viewBox="0 0 512 512"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M502.3 190.8c3.9-3.1 9.7-.2 9.7 4.7V400c0 26.5-21.5 48-48 48H48c-26.5 0-48-21.5-48-48V195.6c0-5 5.7-7.8 9.7-4.7 22.4 17.4 52.1 39.5 154.1 113.6 21.1 15.4 56.7 47.8 92.2 47.6 35.7.3 72-32.8 92.3-47.6 102-74.1 131.6-96.3 154-113.7zM256 320c23.2.4 56.6-29.2 73.4-41.4 132.7-96.3 142.8-104.7 173.4-128.7 5.8-4.5 9.2-11.5 9.2-18.9v-19c0-26.5-21.5-48-48-48H48C21.5 64 0 85.5 0 112v19c0 7.4 3.4 14.3 9.2 18.9 30.6 23.9 40.7 32.4 173.4 128.7 16.8 12.2 50.2 41.8 73.4 41.4z"
                  />
                </svg>
              </div>
              <div
                className="sideCardTitle"
              >
                Contact the Criminal Records Review Program
              </div>
            </div>
          </h2>
          <div
            className="submit-content"
          >
            <span>
              <div
                className="side-card-text"
              >
                For questions about criminal record checks, contact the Criminal Records Review Program Monday to Friday, 8:30 a.m. - 4:30 p.m.
              </div>
              <div
                className="side-card-text"
              >
                <br />
                <div>
                  <svg
                    fill="currentColor"
                    height="1em"
                    stroke="currentColor"
                    strokeWidth="0"
                    style={
                      Object {
                        "color": undefined,
                      }
                    }
                    viewBox="0 0 512 512"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M64 128H32c-17.67 0-32 14.33-32 32v320c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32V160c0-17.67-14.33-32-32-32zm416 32V77.25c0-8.49-3.37-16.62-9.37-22.63L425.37 9.37c-6-6-14.14-9.37-22.63-9.37H160c-17.67 0-32 14.33-32 32v448c0 17.67 14.33 32 32 32h320c17.67 0 32-14.33 32-32V192c0-17.67-14.33-32-32-32zM288 432c0 8.84-7.16 16-16 16h-32c-8.84 0-16-7.16-16-16v-32c0-8.84 7.16-16 16-16h32c8.84 0 16 7.16 16 16v32zm0-128c0 8.84-7.16 16-16 16h-32c-8.84 0-16-7.16-16-16v-32c0-8.84 7.16-16 16-16h32c8.84 0 16 7.16 16 16v32zm128 128c0 8.84-7.16 16-16 16h-32c-8.84 0-16-7.16-16-16v-32c0-8.84 7.16-16 16-16h32c8.84 0 16 7.16 16 16v32zm0-128c0 8.84-7.16 16-16 16h-32c-8.84 0-16-7.16-16-16v-32c0-8.84 7.16-16 16-16h32c8.84 0 16 7.16 16 16v32zm16-112H176V48h208v32c0 8.84 7.16 16 16 16h32v96z"
                    />
                  </svg>
                   
                  <div
                    className="contact-title"
                  >
                    Fax: 
                  </div>
                  (250)356-1889
                </div>
                <div>
                  <svg
                    fill="currentColor"
                    height="1em"
                    stroke="currentColor"
                    strokeWidth="0"
                    style={
                      Object {
                        "color": undefined,
                      }
                    }
                    viewBox="0 0 512 512"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M493.4 24.6l-104-24c-11.3-2.6-22.9 3.3-27.5 13.9l-48 112c-4.2 9.8-1.4 21.3 6.9 28l60.6 49.6c-36 76.7-98.9 140.5-177.2 177.2l-49.6-60.6c-6.8-8.3-18.2-11.1-28-6.9l-112 48C3.9 366.5-2 378.1.6 389.4l24 104C27.1 504.2 36.7 512 48 512c256.1 0 464-207.5 464-464 0-11.2-7.7-20.9-18.6-23.4z"
                    />
                  </svg>
                   
                  <div
                    className="contact-title"
                  >
                    Office: 
                  </div>
                  Toll free - 1 855 587-0185 (press option 2)
                </div>
                <div>
                  <svg
                    fill="currentColor"
                    height="1em"
                    stroke="currentColor"
                    strokeWidth="0"
                    style={
                      Object {
                        "color": undefined,
                      }
                    }
                    viewBox="0 0 512 512"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M502.3 190.8c3.9-3.1 9.7-.2 9.7 4.7V400c0 26.5-21.5 48-48 48H48c-26.5 0-48-21.5-48-48V195.6c0-5 5.7-7.8 9.7-4.7 22.4 17.4 52.1 39.5 154.1 113.6 21.1 15.4 56.7 47.8 92.2 47.6 35.7.3 72-32.8 92.3-47.6 102-74.1 131.6-96.3 154-113.7zM256 320c23.2.4 56.6-29.2 73.4-41.4 132.7-96.3 142.8-104.7 173.4-128.7 5.8-4.5 9.2-11.5 9.2-18.9v-19c0-26.5-21.5-48-48-48H48C21.5 64 0 85.5 0 112v19c0 7.4 3.4 14.3 9.2 18.9 30.6 23.9 40.7 32.4 173.4 128.7 16.8 12.2 50.2 41.8 73.4 41.4z"
                    />
                  </svg>
                    
                  <div
                    className="contact-title"
                  >
                    Email: 
                  </div>
                  <a
                    className="email"
                    href="mailto:criminalrecords@gov.bc.ca"
                  >
                    criminalrecords@gov.bc.ca
                  </a>
                </div>
              </div>
            </span>
          </div>
        </section>
      </div>
    </div>
  </div>
</div>
`;

exports[`SideCards Component CriminalRecord sidecard 1`] = `
<div>
  <div
    className="dashboard-spacing"
    style={
      Object {
        "position": "relative",
      }
    }
  >
    <div
      className="row"
    >
      <div
        className="col-12"
        style={
          Object {
            "paddingTop": "30px",
            "position": "relative",
          }
        }
      >
        <p />
        <section
          className="submit-container"
          id="blue-section"
        >
          <h2
            className="heading-style"
          >
            Why do I need to apply and consent to a criminal record check?
          </h2>
          <div
            className="submit-content"
          >
            <span>
              Learn more about the process
              <button
                className="btn btn-primary dark-button btn btn-md"
                onClick={[Function]}
                type="submit"
              >
                VISIT THE CRIMINAL RECORD REVIEW WEBSITE
              </button>
            </span>
          </div>
        </section>
      </div>
    </div>
  </div>
</div>
`;

exports[`SideCards Component GetBcServices sidecard 1`] = `
<div>
  <div
    className="dashboard-spacing"
    style={
      Object {
        "position": "relative",
      }
    }
  >
    <div
      className="row"
    >
      <div
        className="col-12"
        style={
          Object {
            "paddingTop": "30px",
            "position": "relative",
          }
        }
      >
        <p />
        <section
          className="submit-container"
          id="blue-section"
        >
          <h2
            className="heading-style"
          >
            <div
              className="row"
            >
              <div
                className="round-icon-wrapper"
              >
                <svg
                  className="side-card-icon"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  strokeWidth="0"
                  style={
                    Object {
                      "color": undefined,
                    }
                  }
                  viewBox="0 0 576 512"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M528 32H48C21.5 32 0 53.5 0 80v16h576V80c0-26.5-21.5-48-48-48zM0 432c0 26.5 21.5 48 48 48h480c26.5 0 48-21.5 48-48V128H0v304zm352-232c0-4.4 3.6-8 8-8h144c4.4 0 8 3.6 8 8v16c0 4.4-3.6 8-8 8H360c-4.4 0-8-3.6-8-8v-16zm0 64c0-4.4 3.6-8 8-8h144c4.4 0 8 3.6 8 8v16c0 4.4-3.6 8-8 8H360c-4.4 0-8-3.6-8-8v-16zm0 64c0-4.4 3.6-8 8-8h144c4.4 0 8 3.6 8 8v16c0 4.4-3.6 8-8 8H360c-4.4 0-8-3.6-8-8v-16zM176 192c35.3 0 64 28.7 64 64s-28.7 64-64 64-64-28.7-64-64 28.7-64 64-64zM67.1 396.2C75.5 370.5 99.6 352 128 352h8.2c12.3 5.1 25.7 8 39.8 8s27.6-2.9 39.8-8h8.2c28.4 0 52.5 18.5 60.9 44.2 3.2 9.9-5.2 19.8-15.6 19.8H82.7c-10.4 0-18.8-10-15.6-19.8z"
                  />
                </svg>
              </div>
              <div
                className="sideCardTitle"
              >
                Get a BC Service Card
              </div>
            </div>
          </h2>
          <div
            className="submit-content"
          >
            <span>
              B.C. residents who have lived in the province for at least six months must use a BC Services Card to submit an online Criminal Record Check. Learn how to get a card.
              <div
                className="getServiceButton"
              >
                <button
                  className="btn btn-primary dark-button btn btn-md"
                  onClick={[Function]}
                  type="submit"
                >
                  READ MORE
                </button>
              </div>
            </span>
          </div>
        </section>
      </div>
    </div>
  </div>
</div>
`;
